--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -2,8 +2,16 @@
     box-sizing: border-box;
 }
 
+
 body {
     margin: 0;
+    background-color:#fed0bb;
+}
+
+.Footer{
+    text-align: left;
+    position: absolute;
+    bottom: 0;
 }
 
 .container{
@@ -12,8 +20,8 @@ body {
 }
 
 .nav{
-    background-color: #2F1847;
-    color: #F9B3D1;
+    background-color: #461220;
+    color: #b23a48;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
@@ -45,10 +53,10 @@ body {
 }
 
 .nav li.active{
-    background-color: #624763;
+    background-color: #fcb9b2;
 }
 
 .nav li:hover{
-    background-color: pink;
+    background-color: #fcb9b2;
     color:#C62E65;
 }
